# Cloud-OJ

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  BUILD.md  Cloud-OJ.sql  Dockerfile  INSTALL.md  LICENSE  MANNUL.md  OJ-Database.sql  README.md  build  build.sh  clean.sh  dotnet.runtimeconfig.json  info.json  install-env-ubuntu.sh  oj-database.sql  pom.xml
.deploy/: supervisord.conf
.deploy/cloud-oj/: .env  docker-compose.yml
.deploy/conf/: supervisord.conf
.deploy/docker/: docker-compose.yml  start.sh
.deploy/docker-swarm/: docker-compose.yml  start.sh
.dev/: start-mysql.sh  start-rabbitmq.sh  supervisord.conf
.dev/sql/: init-database.sql
.docker/gateway/: Dockerfile
.docker/registry/: Dockerfile
.docker/web/: Dockerfile  nginx.https.conf
.github/workflows/: cmake.yml  maven.yml  node.js.yml
.run/: CoreApp.run.xml  GatewayApp.run.xml  JudgeApp.run.xml  dev.run.xml  docker.run.xml
api-gateway/: pom.xml
cloud-oj-web/: pom.xml
core-service/: Dockerfile  pom.xml
database/: docker-compose-mysql.yml  docker-compose-rabbitmq.yml  start-mysql&rabbitmq.cmd  stop-mysql&rabbitmq.cmd
database/config/: my.cnf
db/: docker-compose.yml
db/init/: init-database.sql
dev/: compose.yml  docker-compose.yml  install-env  mvn.xml  start-dev
doc/: Build&Setup.md  Dev.md
docker/: compose.yml  docker-compose.yml
file-server/: pom.xml
file-service/: pom.xml
gateway/: pom.xml
judge/: .gitignore  CMakeLists.txt  README.md  build
judge-runner/: .gitignore  CMakeLists.txt  Dockerfile  README.md  cmake-build.sh  cmake-init.sh
judge-runner/include/: common.h  env_setup.h  log.h  options.h  runner.h  syscall_check.h  utils.h
judge-runner/src/: common.cpp  env_setup.cpp  main.cpp  runner.cpp  syscall_check.cpp  utils.cpp
judge-runner/src/judge/: env_setup.cpp  main.cpp  options.cpp
judge-runner/src/judged/: log.cpp  main.cpp
judge-service/: Dockerfile  pom.xml
judge/include/: common.h  env_setup.h  judged.h  log.h  options.h  runner.h  syscall_check.h  syscall_rule.h  thread_pool.h  utils.h
judge/src/: common.cpp  env_setup.cpp  main.cpp  runner.cpp  syscall_rule.cpp  utils.cpp
judge/src/judge/: main.cpp  options.cpp  runner.cpp  syscall_check.cpp  syscall_rule.cpp  utils.cpp
judge/src/judged/: log.cpp  main.cpp  thread_pool.cpp
load-balanced/: pom.xml
manager-service/: pom.xml
monitor/: pom.xml
monitor-service/: pom.xml
mysql/: docker-compose.yml  start-mysql.cmd  stop.cmd  stop.sh
register-center/: pom.xml
registry/: Dockerfile  pom.xml
services/: .gitignore  pom.xml
web/: .eslintrc.cjs  .gitignore  .prettierrc.json  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vue.config.js
web-next/: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
(+1164 files in other folders)
